--- a/css/global.css
+++ b/css/global.css
@@ -28,6 +28,11 @@ body {
     background-color: #ECECEC;
 }
 
+.wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 a {
     text-decoration: none;
     transition: all .3s ease-in;
