--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,6 @@ header {
     }
 }
 
-.wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 .container {
     width: 100%;
 }
@@ -347,7 +342,6 @@ header .responsive-nav ul {
 /***************************review*************************/
 
 .column-right {
-    margin-top: 10px;
     padding: 0 15px;
 }
 
@@ -469,20 +463,20 @@ header .responsive-nav ul {
     }
 }
 
-/*************************** FIRST - BOX *************************/
+/*************************** top-news *************************/
 
-.first-box {
+.top-news {
     background-color: #fff;
     box-shadow: 0 0 2px rgba(0, 0, 0, .3);
     padding: 10px;
 }
 
-.first-box-image a {
+.top-news-image a {
     display: block;
 }
 
 @media screen and (min-width:750px) {
-    .first-box-image {
+    .top-news-image {
         width: 60%;
         float: left;
         padding-right: 10px;
@@ -490,18 +484,18 @@ header .responsive-nav ul {
 }
 
 @media screen and (min-width:750px) {
-    .first-box-details {
+    .top-news-details {
         width: 40%;
         float: right;
     }
 }
 
-.first-box h1 {
+.top-news h1 {
     margin: 0;
     padding: 0;
 }
 
-.first-box h1 a {
+.top-news h1 a {
     color: #1a7e43;
     line-height: 30px;
     font-size: .6em;
@@ -509,19 +503,19 @@ header .responsive-nav ul {
 }
 
 @media screen and (min-width:750px) {
-    .first-box h1 a {
+    .top-news h1 a {
         font-size: .5em;
     }
 }
 
 @media screen and (min-width:950px) {
-    .first-box h1 a {
+    .top-news h1 a {
         font-size: .6em;
         line-height: 27px;
     }
 }
 
-.first-box p {
+.top-news p {
     font-size: .8em;
     line-height: 15px;
     color: #303030;
@@ -531,7 +525,7 @@ header .responsive-nav ul {
     margin: 0;
 }
 
-.first-box img {
+.top-news img {
     width: 100%;
 }
 
@@ -579,75 +573,75 @@ header .responsive-nav ul {
     color: #fff;
 }
 
-/***************************column-mid-NEWS*************************/
+/***************************column-mid-second-subject*************************/
 
 .title h3 {
     margin: 0;
 }
 
-.news .title h3 a {
+.second-subject .title h3 a {
     font-size: .9em;
     color: #3B3B3B;
     line-height: 25px;
     display: block;
 }
 
-.news .news-pic a {
+.second-subject .second-subject-pic a {
     display: block;
 }
 
-.column-mid-news {
+.column-mid-second-subject {
     background-color: #fff;
 }
 
-.news {
+.second-subject {
     border: 1px solid #e4e4e4;
     font-size: .9em;
 }
 
-.news li {
+.second-subject li {
     border-bottom: 1px solid #E4E4E4;
     padding: 10px;
 }
 
-.news li:hover {
+.second-subject li:hover {
     background-color: #EFEFEF;
     transition: all .3s ease-in;
     -moz-transition: all .3s ease-in;
     -o-transition: all .3s ease-in;
 }
 
-.column-mid-news .news li:hover h3 a {
+.column-mid-second-subject .second-subject li:hover h3 a {
     transition: all .3s ease-in;
     -moz-transition: all .3s ease-in;
     -o-transition: all .3s ease-in;
     color: #C92727;
 }
 
-.news .news-pic {
+.second-subject .second-subject-pic {
     width: 100%;
 }
 
 @media screen and (min-width:750px) {
-    .news .news-pic {
+    .second-subject .second-subject-pic {
         width: 40%;
         float: right;
     }
 }
 
-.news .news-pic img {
+.second-subject .second-subject-pic img {
     width: 100%;
     height: auto;
     display: block;
 }
 
-.news .news-details {
+.second-subject .second-subject-details {
     width: 100%;
     padding-right: 10px;
 }
 
 @media screen and (min-width:750px) {
-    .news .news-details {
+    .second-subject .second-subject-details {
         width: 60%;
         float: left;
     }
@@ -666,14 +660,14 @@ header .responsive-nav ul {
     }
 }
 
-.news .lead p {
+.second-subject .lead p {
     color: #666;
     text-align: justify;
     line-height: 25px;
     font-size: .9em;
 }
 
-.news .more {
+.second-subject .more {
     padding: 4px 10px;
     font-size: .9em;
     color: #fff;
@@ -683,7 +677,7 @@ header .responsive-nav ul {
     opacity: .4;
 }
 
-.news .more:hover {
+.second-subject .more:hover {
     opacity: 1;
 }
 
@@ -702,7 +696,6 @@ header .responsive-nav ul {
 
 @media screen and (min-width:950px) {
     .column-left {
-        margin-top: 10px;
         float: left;
     }
 }
@@ -738,7 +731,7 @@ header .responsive-nav ul {
 
 .last-news {
     background-color: #fff;
-    padding: 0 10px;
+    padding: 0 20px;
     width: 100%;
     display: inline-block;
 }
@@ -746,12 +739,14 @@ header .responsive-nav ul {
 .last-news li {
     border-bottom: 1px solid #e4e4e4;
     padding: 5px 0;
+    position: relative;
 }
 
 .last-news a {
     color: #454545;
     line-height: 25px;
     text-align: justify;
+    display: inline-block;
     font-size: .8em;
 }
 
@@ -762,6 +757,9 @@ header .responsive-nav ul {
 .last-news i {
     color: #c92727;
     font-size: .4em;
+    position: absolute;
+    top: 15px;
+    right: -13px;
 }
 
 .last-news .more {
