--- a/css/news.css
+++ b/css/news.css
@@ -11,13 +11,19 @@ body {
 .pull-right {
     width: 100%;
     float: right;
-    padding-left: 20px;
 }
 
 @media screen and (min-width:820px) {
     .pull-right {
         width: 70%;
+        padding-left: 20px;
     }
+}
+
+.pull-right article {
+    padding: 18px;
+    background-color: #fff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .3);
 }
 
 /********************************PULL LEFT ***********************************/
@@ -32,12 +38,6 @@ body {
     .pull-left {
         width: 30%;
     }
-}
-
-.wrapper-news {
-    padding: 18px;
-    background-color: #fff;
-    box-shadow: 0 0 2px rgba(0, 0, 0, .3);
 }
 
 /********************************BREAD CRUMB ***********************************/
@@ -67,7 +67,7 @@ body {
 /********************************HEADER ***********************************/
 
 header .title {
-    padding: 30px 0 20px;
+    padding: 10px 0 20px;
     line-height: 50px;
 }
 
@@ -133,10 +133,63 @@ header .lead {
 
 /********************************ECO DETAILS ***********************************/
 
-.eco-details {
+.echo-details {
     color: #756E75;
     line-height: 30px;
+    margin: 25px 0 20px;
+}
+
+.echo-details p {
     margin: 0;
+    padding: 0;
+}
+
+.echo-details audio {
+    width: 100%;
+}
+
+.echo-details video {
+    width: 100%;
+}
+
+.echo-details table {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+    margin: 30px 0;
+    font-size: .9em;
+}
+
+.echo-details table thead {
+    background-color: #9E1D23;
+    color: white;
+}
+
+.echo-details table tr:nth-child(even) {
+    background-color: #CF9B9E;
+    color: white;
+}
+
+.echo-details ul {
+    margin: 20px 0;
+}
+
+.echo-details a {
+    height: auto;
+    display: block;
+}
+
+.echo-details ul a {
+    display: inline-block;
+    padding: 5px 15px;
+    margin: 3px 0;
+    color: #756E75;
+    border-radius: 10px;
+}
+
+.echo-details ul li a:hover {
+    color: #fff;
+    background-color: #9E1D23;
 }
 
 /********************************  TAGS ***********************************/
@@ -153,26 +206,14 @@ header .lead {
 }
 
 .tags a {
+    width: 100px;
     background-color: #777575;
     color: #fff;
     padding: 10px 15px;
     border-right: 5px solid #B10304;
-    margin: 10px;
-    display: block;
-}
-
-@media screen and (min-width:500px) {
-    .tags a {
-        background-color: #777575;
-        display: inline-block;
-        margin: 10px 15px;
-    }
-}
-
-@media screen and (min-width:820px) {
-    .tags a {
-        margin: 0 0 0 8px;
-    }
+    display: inline-block;
+    margin-top: 10px;
+    text-align: right;
 }
 
 .tags i {
@@ -257,7 +298,7 @@ header .lead {
 
 .news-second a {
     color: #756E75;
-    padding: 30px 15px 25px;
+    padding: 30px 18px 25px;
     display: inline-block;
     font-size: .9em;
     line-height: 25px;
@@ -277,13 +318,12 @@ header .lead {
     display: block;
 }
 
-.container {
-    padding: 30px 10px 10px;
-    display: inline-block;
-}
-
 #email {
     text-align: left;
+}
+
+.form-comments form {
+    padding: 18px;
 }
 
 .form-comments label {
@@ -350,7 +390,7 @@ header .lead {
     border: 2px solid #B10304;
     width: 100%;
     padding: 5px;
-    margin: 15px 0 0;
+    margin: 18px 0;
     color: #B10304;
     background-color: #fff;
 }
@@ -409,6 +449,10 @@ header .lead {
     border-bottom: 1px solid #e4e4e4;
     padding: 5px 0;
     position: relative;
+}
+
+.last-news ul li:nth-last-child(1) {
+    border-bottom: none;
 }
 
 .last-news a {
