--- a/css/search.css
+++ b/css/search.css
@@ -25,7 +25,7 @@ body {
 
 @media screen and (min-width:850px) {
     .pull-right {
-        width: 70%;
+        width: 65%;
         padding-left: 14px;
     }
 }
@@ -34,10 +34,6 @@ body {
 
 .title h3 {
     margin: 0;
-}
-
-.pull-right li:nth-child(even) {
-    background-color: #f6f6f6;
 }
 
 .second-subject .title h3 a {
@@ -61,6 +57,10 @@ body {
     border: 1px solid #e4e4e4;
     font-size: .9em;
     width: 100%;
+}
+
+.pull-right li:nth-child(even) {
+    background-color: #f6f6f6;
 }
 
 .second-subject li {
@@ -134,4 +134,141 @@ body {
     display: block;
     text-align: center;
     padding: 7px;
+}
+
+/******************************************* pull -left  ************************************************/
+
+.pull-left {
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width:450px) {
+    .pull-left {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:850px) {
+    .pull-left {
+        width: 35%;
+        float: left;
+    }
+}
+
+.pull-left header span {
+    display: block;
+    color: #272525;
+    background-color: #D4D4D4;
+    padding: 8px 10px 8px 0;
+}
+
+.pull-left form {
+    padding: 10px;
+    border: 1px solid #cbcbcb;
+}
+
+.pull-left form label {
+    color: #000;
+    font-size: .9em;
+    white-space: nowrap;
+    margin-top: 4px;
+}
+
+.pull-left form input {
+    padding-right: 10px;
+}
+
+hr {
+    border-top: 2px dashed #c92727;
+    margin: 15px 0;
+}
+
+select {
+    width: 20%;
+    height: 25px;
+    display: inline-block;
+    background: #fff;
+    padding-left: 4px;
+    font-size: .9em;
+    direction: ltr;
+}
+
+.keyword {
+    display: flex;
+    justify-content: space-around;
+}
+
+.keyword input {
+    width: 60%;
+}
+
+.start {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px 0;
+}
+
+.end {
+    width: 99.5%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px 0;
+}
+
+.show {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px 0;
+}
+
+.show select {
+    width: 61%;
+    margin-left: 13px;
+}
+
+@media only screen and (min-width:850px) {
+    .show select {
+        margin-left: 0;
+    }
+}
+
+.pull-left form .show label {
+    padding-left: 10%;
+}
+
+@media only screen and (min-width:850px) {
+    .pull-left form .show label {
+        padding-left: 0;
+    }
+}
+
+.options {
+    position: relative;
+    padding: 0 15px 20px 0;
+}
+
+@media only screen and (min-width:550px) {
+    .options {}
+}
+
+.pull-left i {
+    position: absolute;
+    font-size: 1.2;
+    padding-bottom: 10px;
+    color: #c92727;
+    top: 1px;
+    right: 74px;
+}
+
+form button {
+    width: 40%;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    color: #fff;
+    background-color: #666;
+    border: none;
+    padding: 7px;
+    border-radius: 2px;
 }
