--- a/css/service.css
+++ b/css/service.css
@@ -295,7 +295,7 @@ section .top-news-detail:hover a {
     display: block;
 }
 
-.review .title-name #name-icon {
+.review .title-name .name-icon {
     color: green;
     font-size: .8em;
 }
